# sims4-qol-pack

./: .gitignore  README.md  pyproject.toml
research/: ARCHITECTURE.md  qol-decompilation-2026-03-30.md
src/qol_pack/: __init__.py  _compat.py  events.py  teasers.py
src/qol_pack/core/: __init__.py  affordance_injector.py  autonomy_throttle.py  scaleform_bridge.py
src/qol_pack/modules/: __init__.py  auto_updater.py  build_tools.py  diagnostics.py  performance.py  settings.py  ui_tweaks.py
tests/: conftest.py  test_auto_updater.py  test_build_tools.py  test_compat.py  test_diagnostics.py  test_events.py  test_performance.py  test_settings.py  test_teasers.py  test_tuning.py  test_ui_tweaks.py
tuning/: README.md  autonomy_timing.xml  routing_optimization.xml  time_scale.xml
